// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`babel transform modules babel-plugin-transform-modules - Fixture: babel-helpers 1`] = `
"_$.g(_$.e, \\"typeof\\", function () {
  return _typeof;
});

_$.g(_$.e, \\"jsx\\", function () {
  return _jsx;
});

_$.g(_$.e, \\"asyncIterator\\", function () {
  return _asyncIterator;
});

_$.g(_$.e, \\"AwaitValue\\", function () {
  return _AwaitValue;
});

_$.g(_$.e, \\"AsyncGenerator\\", function () {
  return _AsyncGenerator;
});

_$.g(_$.e, \\"wrapAsyncGenerator\\", function () {
  return _wrapAsyncGenerator;
});

_$.g(_$.e, \\"awaitAsyncGenerator\\", function () {
  return _awaitAsyncGenerator;
});

_$.g(_$.e, \\"asyncGeneratorDelegate\\", function () {
  return _asyncGeneratorDelegate;
});

_$.g(_$.e, \\"asyncToGenerator\\", function () {
  return _asyncToGenerator;
});

_$.g(_$.e, \\"classCallCheck\\", function () {
  return _classCallCheck;
});

_$.g(_$.e, \\"createClass\\", function () {
  return _createClass;
});

_$.g(_$.e, \\"defineEnumerableProperties\\", function () {
  return _defineEnumerableProperties;
});

_$.g(_$.e, \\"defaults\\", function () {
  return _defaults;
});

_$.g(_$.e, \\"defineProperty\\", function () {
  return _defineProperty;
});

_$.g(_$.e, \\"extends\\", function () {
  return _extends;
});

_$.g(_$.e, \\"get\\", function () {
  return _get;
});

_$.g(_$.e, \\"inherits\\", function () {
  return _inherits;
});

_$.g(_$.e, \\"inheritsLoose\\", function () {
  return _inheritsLoose;
});

_$.g(_$.e, \\"instanceof\\", function () {
  return _instanceof;
});

_$.g(_$.e, \\"interopRequireDefault\\", function () {
  return _interopRequireDefault;
});

_$.g(_$.e, \\"interopRequireWildcard\\", function () {
  return _interopRequireWildcard;
});

_$.g(_$.e, \\"newArrowCheck\\", function () {
  return _newArrowCheck;
});

_$.g(_$.e, \\"objectDestructuringEmpty\\", function () {
  return _objectDestructuringEmpty;
});

_$.g(_$.e, \\"objectWithoutProperties\\", function () {
  return _objectWithoutProperties;
});

_$.g(_$.e, \\"assertThisInitialized\\", function () {
  return _assertThisInitialized;
});

_$.g(_$.e, \\"possibleConstructorReturn\\", function () {
  return _possibleConstructorReturn;
});

_$.g(_$.e, \\"set\\", function () {
  return _set;
});

_$.g(_$.e, \\"slicedToArray\\", function () {
  return _slicedToArray;
});

_$.g(_$.e, \\"slicedToArrayLoose\\", function () {
  return _slicedToArrayLoose;
});

_$.g(_$.e, \\"taggedTemplateLiteral\\", function () {
  return _taggedTemplateLiteral;
});

_$.g(_$.e, \\"taggedTemplateLiteralLoose\\", function () {
  return _taggedTemplateLiteralLoose;
});

_$.g(_$.e, \\"temporalRef\\", function () {
  return _temporalRef;
});

_$.g(_$.e, \\"readOnlyError\\", function () {
  return _readOnlyError;
});

_$.g(_$.e, \\"classNameTDZError\\", function () {
  return _classNameTDZError;
});

_$.g(_$.e, \\"temporalUndefined\\", function () {
  return _temporalUndefined;
});

_$.g(_$.e, \\"toArray\\", function () {
  return _toArray;
});

_$.g(_$.e, \\"toConsumableArray\\", function () {
  return _toConsumableArray;
});

_$.g(_$.e, \\"skipFirstGeneratorNext\\", function () {
  return _skipFirstGeneratorNext;
});

_$.g(_$.e, \\"toPropertyKey\\", function () {
  return _toPropertyKey;
});

_$.g(_$.e, \\"initializerWarningHelper\\", function () {
  return _initializerWarningHelper;
});

_$.g(_$.e, \\"initializerDefineProperty\\", function () {
  return _initializerDefineProperty;
});

_$.g(_$.e, \\"applyDecoratedDescriptor\\", function () {
  return _applyDecoratedDescriptor;
});

function _typeof(obj) {
  if (typeof Symbol === \\"function\\" && typeof Symbol.iterator === \\"symbol\\") {
    _typeof = function (obj) {
      return typeof obj;
    };
  } else {
    _typeof = function (obj) {
      return obj && typeof Symbol === \\"function\\" && obj.constructor === Symbol && obj !== Symbol.prototype ? \\"symbol\\" : typeof obj;
    };
  }

  return _typeof(obj);
}

var REACT_ELEMENT_TYPE;

function _jsx(type, props, key, children) {
  if (!REACT_ELEMENT_TYPE) {
    REACT_ELEMENT_TYPE = typeof Symbol === \\"function\\" && Symbol.for && Symbol.for(\\"react.element\\") || 0xeac7;
  }

  var defaultProps = type && type.defaultProps;
  var childrenLength = arguments.length - 3;

  if (!props && childrenLength !== 0) {
    props = {};
  }

  if (props && defaultProps) {
    for (var propName in defaultProps) {
      if (props[propName] === void 0) {
        props[propName] = defaultProps[propName];
      }
    }
  } else if (!props) {
    props = defaultProps || {};
  }

  if (childrenLength === 1) {
    props.children = children;
  } else if (childrenLength > 1) {
    var childArray = new Array(childrenLength);

    for (var i = 0; i < childrenLength; i++) {
      childArray[i] = arguments[i + 3];
    }

    props.children = childArray;
  }

  return {
    $$typeof: REACT_ELEMENT_TYPE,
    type: type,
    key: key === undefined ? null : '' + key,
    ref: null,
    props: props,
    _owner: null
  };
}

function _asyncIterator(iterable) {
  if (typeof Symbol === \\"function\\") {
    if (Symbol.asyncIterator) {
      var method = iterable[Symbol.asyncIterator];
      if (method != null) return method.call(iterable);
    }

    if (Symbol.iterator) {
      return iterable[Symbol.iterator]();
    }
  }

  throw new TypeError(\\"Object is not async iterable\\");
}

function _AwaitValue(value) {
  this.wrapped = value;
}

function _AsyncGenerator(gen) {
  var front, back;

  function send(key, arg) {
    return new Promise(function (resolve, reject) {
      var request = {
        key: key,
        arg: arg,
        resolve: resolve,
        reject: reject,
        next: null
      };

      if (back) {
        back = back.next = request;
      } else {
        front = back = request;
        resume(key, arg);
      }
    });
  }

  function resume(key, arg) {
    try {
      var result = gen[key](arg);
      var value = result.value;
      var wrappedAwait = value instanceof _AwaitValue;
      Promise.resolve(wrappedAwait ? value.wrapped : value).then(function (arg) {
        if (wrappedAwait) {
          resume(\\"next\\", arg);
          return;
        }

        settle(result.done ? \\"return\\" : \\"normal\\", arg);
      }, function (err) {
        resume(\\"throw\\", err);
      });
    } catch (err) {
      settle(\\"throw\\", err);
    }
  }

  function settle(type, value) {
    switch (type) {
      case \\"return\\":
        front.resolve({
          value: value,
          done: true
        });
        break;

      case \\"throw\\":
        front.reject(value);
        break;

      default:
        front.resolve({
          value: value,
          done: false
        });
        break;
    }

    front = front.next;

    if (front) {
      resume(front.key, front.arg);
    } else {
      back = null;
    }
  }

  this._invoke = send;

  if (typeof gen.return !== \\"function\\") {
    this.return = undefined;
  }
}

if (typeof Symbol === \\"function\\" && Symbol.asyncIterator) {
  _AsyncGenerator.prototype[Symbol.asyncIterator] = function () {
    return this;
  };
}

_AsyncGenerator.prototype.next = function (arg) {
  return this._invoke(\\"next\\", arg);
};

_AsyncGenerator.prototype.throw = function (arg) {
  return this._invoke(\\"throw\\", arg);
};

_AsyncGenerator.prototype.return = function (arg) {
  return this._invoke(\\"return\\", arg);
};

function _wrapAsyncGenerator(fn) {
  return function () {
    return new _AsyncGenerator(fn.apply(this, arguments));
  };
}

function _awaitAsyncGenerator(value) {
  return new _AwaitValue(value);
}

function _asyncGeneratorDelegate(inner, awaitWrap) {
  var iter = {},
      waiting = false;

  function pump(key, value) {
    waiting = true;
    value = new Promise(function (resolve) {
      resolve(inner[key](value));
    });
    return {
      done: false,
      value: awaitWrap(value)
    };
  }

  ;

  if (typeof Symbol === \\"function\\" && Symbol.iterator) {
    iter[Symbol.iterator] = function () {
      return this;
    };
  }

  iter.next = function (value) {
    if (waiting) {
      waiting = false;
      return value;
    }

    return pump(\\"next\\", value);
  };

  if (typeof inner.throw === \\"function\\") {
    iter.throw = function (value) {
      if (waiting) {
        waiting = false;
        throw value;
      }

      return pump(\\"throw\\", value);
    };
  }

  if (typeof inner.return === \\"function\\") {
    iter.return = function (value) {
      return pump(\\"return\\", value);
    };
  }

  return iter;
}

function _asyncToGenerator(fn) {
  return function () {
    var self = this,
        args = arguments;
    return new Promise(function (resolve, reject) {
      var gen = fn.apply(self, args);

      function step(key, arg) {
        try {
          var info = gen[key](arg);
          var value = info.value;
        } catch (error) {
          reject(error);
          return;
        }

        if (info.done) {
          resolve(value);
        } else {
          Promise.resolve(value).then(_next, _throw);
        }
      }

      function _next(value) {
        step(\\"next\\", value);
      }

      function _throw(err) {
        step(\\"throw\\", err);
      }

      _next();
    });
  };
}

function _classCallCheck(instance, Constructor) {
  if (!(instance instanceof Constructor)) {
    throw new TypeError(\\"Cannot call a class as a function\\");
  }
}

function _defineProperties(target, props) {
  for (var i = 0; i < props.length; i++) {
    var descriptor = props[i];
    descriptor.enumerable = descriptor.enumerable || false;
    descriptor.configurable = true;
    if (\\"value\\" in descriptor) descriptor.writable = true;
    Object.defineProperty(target, descriptor.key, descriptor);
  }
}

function _createClass(Constructor, protoProps, staticProps) {
  if (protoProps) _defineProperties(Constructor.prototype, protoProps);
  if (staticProps) _defineProperties(Constructor, staticProps);
  return Constructor;
}

function _defineEnumerableProperties(obj, descs) {
  for (var key in descs) {
    var desc = descs[key];
    desc.configurable = desc.enumerable = true;
    if (\\"value\\" in desc) desc.writable = true;
    Object.defineProperty(obj, key, desc);
  }

  if (Object.getOwnPropertySymbols) {
    var objectSymbols = Object.getOwnPropertySymbols(descs);

    for (var i = 0; i < objectSymbols.length; i++) {
      var sym = objectSymbols[i];
      var desc = descs[sym];
      desc.configurable = desc.enumerable = true;
      if (\\"value\\" in desc) desc.writable = true;
      Object.defineProperty(obj, sym, desc);
    }
  }

  return obj;
}

function _defaults(obj, defaults) {
  var keys = Object.getOwnPropertyNames(defaults);

  for (var i = 0; i < keys.length; i++) {
    var key = keys[i];
    var value = Object.getOwnPropertyDescriptor(defaults, key);

    if (value && value.configurable && obj[key] === undefined) {
      Object.defineProperty(obj, key, value);
    }
  }

  return obj;
}

function _defineProperty(obj, key, value) {
  if (key in obj) {
    Object.defineProperty(obj, key, {
      value: value,
      enumerable: true,
      configurable: true,
      writable: true
    });
  } else {
    obj[key] = value;
  }

  return obj;
}

function _extends() {
  _extends = Object.assign || function (target) {
    for (var i = 1; i < arguments.length; i++) {
      var source = arguments[i];

      for (var key in source) {
        if (Object.prototype.hasOwnProperty.call(source, key)) {
          target[key] = source[key];
        }
      }
    }

    return target;
  };

  return _extends.apply(this, arguments);
}

function _get(object, property, receiver) {
  if (object === null) object = Function.prototype;
  var desc = Object.getOwnPropertyDescriptor(object, property);

  if (desc === undefined) {
    var parent = Object.getPrototypeOf(object);

    if (parent === null) {
      return undefined;
    } else {
      return _get(parent, property, receiver);
    }
  } else if (\\"value\\" in desc) {
    return desc.value;
  } else {
    var getter = desc.get;

    if (getter === undefined) {
      return undefined;
    }

    return getter.call(receiver);
  }
}

function _inherits(subClass, superClass) {
  if (typeof superClass !== \\"function\\" && superClass !== null) {
    throw new TypeError(\\"Super expression must either be null or a function\\");
  }

  subClass.prototype = Object.create(superClass && superClass.prototype, {
    constructor: {
      value: subClass,
      enumerable: false,
      writable: true,
      configurable: true
    }
  });
  if (superClass) Object.setPrototypeOf ? Object.setPrototypeOf(subClass, superClass) : subClass.__proto__ = superClass;
}

function _inheritsLoose(subClass, superClass) {
  subClass.prototype = Object.create(superClass.prototype);
  subClass.prototype.constructor = subClass;
  subClass.__proto__ = superClass;
}

function _instanceof(left, right) {
  if (right != null && typeof Symbol !== \\"undefined\\" && right[Symbol.hasInstance]) {
    return right[Symbol.hasInstance](left);
  } else {
    return left instanceof right;
  }
}

function _interopRequireDefault(obj) {
  return obj && obj.__esModule ? obj : {
    default: obj
  };
}

function _interopRequireWildcard(obj) {
  if (obj && obj.__esModule) {
    return obj;
  } else {
    var newObj = {};

    if (obj != null) {
      for (var key in obj) {
        if (Object.prototype.hasOwnProperty.call(obj, key)) {
          var desc = Object.defineProperty && Object.getOwnPropertyDescriptor ? Object.getOwnPropertyDescriptor(obj, key) : {};

          if (desc.get || desc.set) {
            Object.defineProperty(newObj, key, desc);
          } else {
            newObj[key] = obj[key];
          }
        }
      }
    }

    newObj.default = obj;
    return newObj;
  }
}

function _newArrowCheck(innerThis, boundThis) {
  if (innerThis !== boundThis) {
    throw new TypeError(\\"Cannot instantiate an arrow function\\");
  }
}

function _objectDestructuringEmpty(obj) {
  if (obj == null) throw new TypeError(\\"Cannot destructure undefined\\");
}

function _objectWithoutProperties(source, excluded) {
  if (source == null) return {};
  var target = {};
  var sourceKeys = Object.keys(source);
  var key, i;

  for (i = 0; i < sourceKeys.length; i++) {
    key = sourceKeys[i];
    if (excluded.indexOf(key) >= 0) continue;
    target[key] = source[key];
  }

  if (Object.getOwnPropertySymbols) {
    var sourceSymbolKeys = Object.getOwnPropertySymbols(source);

    for (i = 0; i < sourceSymbolKeys.length; i++) {
      key = sourceSymbolKeys[i];
      if (excluded.indexOf(key) >= 0) continue;
      if (!Object.prototype.propertyIsEnumerable.call(source, key)) continue;
      target[key] = source[key];
    }
  }

  return target;
}

function _assertThisInitialized(self) {
  if (self === void 0) {
    throw new ReferenceError(\\"this hasn't been initialised - super() hasn't been called\\");
  }

  return self;
}

function _possibleConstructorReturn(self, call) {
  if (call && (typeof call === \\"object\\" || typeof call === \\"function\\")) {
    return call;
  }

  if (self === void 0) {
    throw new ReferenceError(\\"this hasn't been initialised - super() hasn't been called\\");
  }

  return self;
}

function _set(object, property, value, receiver) {
  var desc = Object.getOwnPropertyDescriptor(object, property);

  if (desc === undefined) {
    var parent = Object.getPrototypeOf(object);

    if (parent !== null) {
      _set(parent, property, value, receiver);
    }
  } else if (\\"value\\" in desc && desc.writable) {
    desc.value = value;
  } else {
    var setter = desc.set;

    if (setter !== undefined) {
      setter.call(receiver, value);
    }
  }

  return value;
}

function _sliceIterator(arr, i) {
  var _arr = [];
  var _n = true;
  var _d = false;
  var _e = undefined;

  try {
    for (var _i = arr[Symbol.iterator](), _s; !(_n = (_s = _i.next()).done); _n = true) {
      _arr.push(_s.value);

      if (i && _arr.length === i) break;
    }
  } catch (err) {
    _d = true;
    _e = err;
  } finally {
    try {
      if (!_n && _i[\\"return\\"] != null) _i[\\"return\\"]();
    } finally {
      if (_d) throw _e;
    }
  }

  return _arr;
}

function _slicedToArray(arr, i) {
  if (Array.isArray(arr)) {
    return arr;
  } else if (Symbol.iterator in Object(arr)) {
    return _sliceIterator(arr, i);
  } else {
    throw new TypeError(\\"Invalid attempt to destructure non-iterable instance\\");
  }
}

function _slicedToArrayLoose(arr, i) {
  if (Array.isArray(arr)) {
    return arr;
  } else if (Symbol.iterator in Object(arr)) {
    var _arr = [];

    for (var _iterator = arr[Symbol.iterator](), _step; !(_step = _iterator.next()).done;) {
      _arr.push(_step.value);

      if (i && _arr.length === i) break;
    }

    return _arr;
  } else {
    throw new TypeError(\\"Invalid attempt to destructure non-iterable instance\\");
  }
}

function _taggedTemplateLiteral(strings, raw) {
  return Object.freeze(Object.defineProperties(strings, {
    raw: {
      value: Object.freeze(raw)
    }
  }));
}

function _taggedTemplateLiteralLoose(strings, raw) {
  strings.raw = raw;
  return strings;
}

function _temporalRef(val, name) {
  if (val === _temporalUndefined) {
    throw new ReferenceError(name + \\" is not defined - temporal dead zone\\");
  } else {
    return val;
  }
}

function _readOnlyError(name) {
  throw new Error(\\"\\\\\\"\\" + name + \\"\\\\\\" is read-only\\");
}

function _classNameTDZError(name) {
  throw new Error(\\"Class \\\\\\"\\" + name + \\"\\\\\\" cannot be referenced in computed property keys.\\");
}

var _temporalUndefined = {};

function _toArray(arr) {
  return Array.isArray(arr) ? arr : Array.from(arr);
}

function _toConsumableArray(arr) {
  if (Array.isArray(arr)) {
    for (var i = 0, arr2 = new Array(arr.length); i < arr.length; i++) arr2[i] = arr[i];

    return arr2;
  } else {
    return Array.from(arr);
  }
}

function _skipFirstGeneratorNext(fn) {
  return function () {
    var it = fn.apply(this, arguments);
    it.next();
    return it;
  };
}

function _toPropertyKey(key) {
  if (typeof key === \\"symbol\\") {
    return key;
  } else {
    return String(key);
  }
}

function _initializerWarningHelper(descriptor, context) {
  throw new Error('Decorating class property failed. Please ensure that ' + 'proposal-class-properties is enabled and set to use loose mode. ' + 'To use proposal-class-properties in spec mode with decorators, wait for ' + 'the next major version of decorators in stage 2.');
}

function _initializerDefineProperty(target, property, descriptor, context) {
  if (!descriptor) return;
  Object.defineProperty(target, property, {
    enumerable: descriptor.enumerable,
    configurable: descriptor.configurable,
    writable: descriptor.writable,
    value: descriptor.initializer ? descriptor.initializer.call(context) : void 0
  });
}

function _applyDecoratedDescriptor(target, property, decorators, descriptor, context) {
  var desc = {};
  Object['ke' + 'ys'](descriptor).forEach(function (key) {
    desc[key] = descriptor[key];
  });
  desc.enumerable = !!desc.enumerable;
  desc.configurable = !!desc.configurable;

  if ('value' in desc || desc.initializer) {
    desc.writable = true;
  }

  desc = decorators.slice().reverse().reduce(function (desc, decorator) {
    return decorator(target, property, desc) || desc;
  }, desc);

  if (context && desc.initializer !== void 0) {
    desc.value = desc.initializer ? desc.initializer.call(context) : void 0;
    desc.initializer = undefined;
  }

  if (desc.initializer === void 0) {
    Object['define' + 'Property'](target, property, desc);
    desc = null;
  }

  return desc;
}"
`;

exports[`babel transform modules babel-plugin-transform-modules - Fixture: commonjs 1`] = `
"_$.e.__esModule = false;
_$.e.default = {
  default: {}
}.default;

_$.e.default.thing();

_$.e.default.thing();

_$.e.default.foo = {};
_$.e.default.bar = {};

_$.r.r(\\"package\\");

const abc = _$.e.default.abc = function () {
  const module = {
    exports: {}
  };
  module.exports.foo = {};
};

_$.e.default = function () {};

const req = require;"
`;

exports[`babel transform modules babel-plugin-transform-modules - Fixture: dynamic-import 1`] = `
"_$.i(\\"./foo\\").then();

function foo(n) {
  _$.i(\`./foo-\${n}\`).then();
}"
`;

exports[`babel transform modules babel-plugin-transform-modules - Fixture: export-default 1`] = `"_$.e.default = 42;"`;

exports[`babel transform modules babel-plugin-transform-modules - Fixture: export-default-2 1`] = `"_$.e.default = {};"`;

exports[`babel transform modules babel-plugin-transform-modules - Fixture: export-default-3 1`] = `"_$.e.default = [];"`;

exports[`babel transform modules babel-plugin-transform-modules - Fixture: export-default-4 1`] = `
"_$.e.default = foo;
foo = 20;"
`;

exports[`babel transform modules babel-plugin-transform-modules - Fixture: export-default-5 1`] = `
"_$.e.default = {
  default: function () {}
}.default;"
`;

exports[`babel transform modules babel-plugin-transform-modules - Fixture: export-default-6 1`] = `
"_$.e.default = {
  default: class {}
}.default;"
`;

exports[`babel transform modules babel-plugin-transform-modules - Fixture: export-default-7 1`] = `
"_$.g(_$.e, \\"default\\", function () {
  return foo;
});

function foo() {}

foo = 20;"
`;

exports[`babel transform modules babel-plugin-transform-modules - Fixture: export-default-8 1`] = `
"_$.g(_$.e, \\"default\\", function () {
  return Foo;
});

class Foo {}

Foo = 20;"
`;

exports[`babel transform modules babel-plugin-transform-modules - Fixture: export-default-9 1`] = `
"_$.g(_$.e, \\"default\\", function () {
  return foo;
});

let foo = 10;"
`;

exports[`babel transform modules babel-plugin-transform-modules - Fixture: export-default-10 1`] = `
"_$.e.default = function () {
  return \\"foo\\";
}();"
`;

exports[`babel transform modules babel-plugin-transform-modules - Fixture: export-default-11 1`] = `
"_$.g(_$.e, \\"Cachier\\", function () {
  return Cachier;
});

_$.e.default = new Cachier();

function Cachier(databaseName) {}"
`;

exports[`babel transform modules babel-plugin-transform-modules - Fixture: export-default-12 1`] = `
"_$.g(_$.e, \\"Cachier\\", function () {
  return Cachier;
});

_$.e.default = new Cachier();

function Cachier(databaseName) {}"
`;

exports[`babel transform modules babel-plugin-transform-modules - Fixture: export-default-13 1`] = `
"class Foo {}

_$.e.default = new Foo();"
`;

exports[`babel transform modules babel-plugin-transform-modules - Fixture: export-extensions 1`] = `
"var _abc = _$.r(\\"./abc\\");

_$.g(_$.e, \\"a\\", function () {
  return _abc.default;
});

_$.e.b = _abc;"
`;

exports[`babel transform modules babel-plugin-transform-modules - Fixture: export-from 1`] = `
"var _foo = _$.r(\\"foo\\");

_$.a(e, _foo);

_$.g(_$.e, \\"foo\\", function () {
  return foo;
});

let foo = 10;"
`;

exports[`babel transform modules babel-plugin-transform-modules - Fixture: export-from-2 1`] = `
"var _foo = _$.r(\\"foo\\");

_$.g(_$.e, \\"foo\\", function () {
  return _foo.foo;
});"
`;

exports[`babel transform modules babel-plugin-transform-modules - Fixture: export-from-3 1`] = `
"var _foo = _$.r(\\"foo\\");

_$.g(_$.e, \\"foo\\", function () {
  return _foo.foo;
});

_$.g(_$.e, \\"bar\\", function () {
  return _foo.bar;
});"
`;

exports[`babel transform modules babel-plugin-transform-modules - Fixture: export-from-4 1`] = `
"var _foo = _$.r(\\"foo\\");

_$.g(_$.e, \\"bar\\", function () {
  return _foo.foo;
});"
`;

exports[`babel transform modules babel-plugin-transform-modules - Fixture: export-from-5 1`] = `
"var _foo = _$.r(\\"foo\\");

_$.g(_$.e, \\"default\\", function () {
  return _foo.foo;
});"
`;

exports[`babel transform modules babel-plugin-transform-modules - Fixture: export-from-6 1`] = `
"var _foo = _$.r(\\"foo\\");

_$.g(_$.e, \\"default\\", function () {
  return _foo.foo;
});

_$.g(_$.e, \\"bar\\", function () {
  return _foo.bar;
});"
`;

exports[`babel transform modules babel-plugin-transform-modules - Fixture: export-from-7 1`] = `
"var _foo = _$.r(\\"foo\\");

_$.g(_$.e, \\"foo\\", function () {
  return _foo.default;
});"
`;

exports[`babel transform modules babel-plugin-transform-modules - Fixture: export-from-8 1`] = `
"var _foo = _$.r(\\"foo\\");

_$.g(_$.e, \\"foo\\", function () {
  return _foo.foo;
});

_$.g(_$.e, \\"foo1\\", function () {
  return _foo.foo1;
});

_$.g(_$.e, \\"foo2\\", function () {
  return _foo.foo2;
});

_$.g(_$.e, \\"foo3\\", function () {
  return _foo.foo3;
});

_$.g(_$.e, \\"foo4\\", function () {
  return _foo.foo4;
});

_$.g(_$.e, \\"foo5\\", function () {
  return _foo.foo5;
});

_$.g(_$.e, \\"foo6\\", function () {
  return _foo.foo6;
});

_$.g(_$.e, \\"foo7\\", function () {
  return _foo.foo7;
});

_$.g(_$.e, \\"foo8\\", function () {
  return _foo.foo8;
});

_$.g(_$.e, \\"foo9\\", function () {
  return _foo.foo9;
});

_$.g(_$.e, \\"foo10\\", function () {
  return _foo.foo10;
});

_$.g(_$.e, \\"foo11\\", function () {
  return _foo.foo11;
});

_$.g(_$.e, \\"foo12\\", function () {
  return _foo.foo12;
});

_$.g(_$.e, \\"foo13\\", function () {
  return _foo.foo13;
});

_$.g(_$.e, \\"foo14\\", function () {
  return _foo.foo14;
});

_$.g(_$.e, \\"foo15\\", function () {
  return _foo.foo15;
});

_$.g(_$.e, \\"foo16\\", function () {
  return _foo.foo16;
});

_$.g(_$.e, \\"foo17\\", function () {
  return _foo.foo17;
});

_$.g(_$.e, \\"foo18\\", function () {
  return _foo.foo18;
});

_$.g(_$.e, \\"foo19\\", function () {
  return _foo.foo19;
});

_$.g(_$.e, \\"foo20\\", function () {
  return _foo.foo20;
});

_$.g(_$.e, \\"foo21\\", function () {
  return _foo.foo21;
});

_$.g(_$.e, \\"foo22\\", function () {
  return _foo.foo22;
});

_$.g(_$.e, \\"foo23\\", function () {
  return _foo.foo23;
});

_$.g(_$.e, \\"foo24\\", function () {
  return _foo.foo24;
});

_$.g(_$.e, \\"foo25\\", function () {
  return _foo.foo25;
});

_$.g(_$.e, \\"foo26\\", function () {
  return _foo.foo26;
});

_$.g(_$.e, \\"foo27\\", function () {
  return _foo.foo27;
});

_$.g(_$.e, \\"foo28\\", function () {
  return _foo.foo28;
});

_$.g(_$.e, \\"foo29\\", function () {
  return _foo.foo29;
});

_$.g(_$.e, \\"foo30\\", function () {
  return _foo.foo30;
});

_$.g(_$.e, \\"foo31\\", function () {
  return _foo.foo31;
});

_$.g(_$.e, \\"foo32\\", function () {
  return _foo.foo32;
});

_$.g(_$.e, \\"foo33\\", function () {
  return _foo.foo33;
});

_$.g(_$.e, \\"foo34\\", function () {
  return _foo.foo34;
});

_$.g(_$.e, \\"foo35\\", function () {
  return _foo.foo35;
});

_$.g(_$.e, \\"foo36\\", function () {
  return _foo.foo36;
});

_$.g(_$.e, \\"foo37\\", function () {
  return _foo.foo37;
});

_$.g(_$.e, \\"foo38\\", function () {
  return _foo.foo38;
});

_$.g(_$.e, \\"foo39\\", function () {
  return _foo.foo39;
});

_$.g(_$.e, \\"foo40\\", function () {
  return _foo.foo40;
});

_$.g(_$.e, \\"foo41\\", function () {
  return _foo.foo41;
});

_$.g(_$.e, \\"foo42\\", function () {
  return _foo.foo42;
});

_$.g(_$.e, \\"foo43\\", function () {
  return _foo.foo43;
});

_$.g(_$.e, \\"foo44\\", function () {
  return _foo.foo44;
});

_$.g(_$.e, \\"foo45\\", function () {
  return _foo.foo45;
});

_$.g(_$.e, \\"foo46\\", function () {
  return _foo.foo46;
});

_$.g(_$.e, \\"foo47\\", function () {
  return _foo.foo47;
});

_$.g(_$.e, \\"foo48\\", function () {
  return _foo.foo48;
});

_$.g(_$.e, \\"foo49\\", function () {
  return _foo.foo49;
});

_$.g(_$.e, \\"foo50\\", function () {
  return _foo.foo50;
});

_$.g(_$.e, \\"foo51\\", function () {
  return _foo.foo51;
});

_$.g(_$.e, \\"foo52\\", function () {
  return _foo.foo52;
});

_$.g(_$.e, \\"foo53\\", function () {
  return _foo.foo53;
});

_$.g(_$.e, \\"foo54\\", function () {
  return _foo.foo54;
});

_$.g(_$.e, \\"foo55\\", function () {
  return _foo.foo55;
});

_$.g(_$.e, \\"foo56\\", function () {
  return _foo.foo56;
});

_$.g(_$.e, \\"foo57\\", function () {
  return _foo.foo57;
});

_$.g(_$.e, \\"foo58\\", function () {
  return _foo.foo58;
});

_$.g(_$.e, \\"foo59\\", function () {
  return _foo.foo59;
});

_$.g(_$.e, \\"foo60\\", function () {
  return _foo.foo60;
});

_$.g(_$.e, \\"foo61\\", function () {
  return _foo.foo61;
});

_$.g(_$.e, \\"foo62\\", function () {
  return _foo.foo62;
});

_$.g(_$.e, \\"foo63\\", function () {
  return _foo.foo63;
});

_$.g(_$.e, \\"foo64\\", function () {
  return _foo.foo64;
});

_$.g(_$.e, \\"foo65\\", function () {
  return _foo.foo65;
});

_$.g(_$.e, \\"foo66\\", function () {
  return _foo.foo66;
});

_$.g(_$.e, \\"foo67\\", function () {
  return _foo.foo67;
});

_$.g(_$.e, \\"foo68\\", function () {
  return _foo.foo68;
});

_$.g(_$.e, \\"foo69\\", function () {
  return _foo.foo69;
});

_$.g(_$.e, \\"foo70\\", function () {
  return _foo.foo70;
});

_$.g(_$.e, \\"foo71\\", function () {
  return _foo.foo71;
});

_$.g(_$.e, \\"foo72\\", function () {
  return _foo.foo72;
});

_$.g(_$.e, \\"foo73\\", function () {
  return _foo.foo73;
});

_$.g(_$.e, \\"foo74\\", function () {
  return _foo.foo74;
});

_$.g(_$.e, \\"foo75\\", function () {
  return _foo.foo75;
});

_$.g(_$.e, \\"foo76\\", function () {
  return _foo.foo76;
});

_$.g(_$.e, \\"foo77\\", function () {
  return _foo.foo77;
});

_$.g(_$.e, \\"foo78\\", function () {
  return _foo.foo78;
});

_$.g(_$.e, \\"foo79\\", function () {
  return _foo.foo79;
});

_$.g(_$.e, \\"foo80\\", function () {
  return _foo.foo80;
});

_$.g(_$.e, \\"foo81\\", function () {
  return _foo.foo81;
});

_$.g(_$.e, \\"foo82\\", function () {
  return _foo.foo82;
});

_$.g(_$.e, \\"foo83\\", function () {
  return _foo.foo83;
});

_$.g(_$.e, \\"foo84\\", function () {
  return _foo.foo84;
});

_$.g(_$.e, \\"foo85\\", function () {
  return _foo.foo85;
});

_$.g(_$.e, \\"foo86\\", function () {
  return _foo.foo86;
});

_$.g(_$.e, \\"foo87\\", function () {
  return _foo.foo87;
});

_$.g(_$.e, \\"foo88\\", function () {
  return _foo.foo88;
});

_$.g(_$.e, \\"foo89\\", function () {
  return _foo.foo89;
});

_$.g(_$.e, \\"foo90\\", function () {
  return _foo.foo90;
});

_$.g(_$.e, \\"foo91\\", function () {
  return _foo.foo91;
});

_$.g(_$.e, \\"foo92\\", function () {
  return _foo.foo92;
});

_$.g(_$.e, \\"foo93\\", function () {
  return _foo.foo93;
});

_$.g(_$.e, \\"foo94\\", function () {
  return _foo.foo94;
});

_$.g(_$.e, \\"foo95\\", function () {
  return _foo.foo95;
});

_$.g(_$.e, \\"foo96\\", function () {
  return _foo.foo96;
});

_$.g(_$.e, \\"foo97\\", function () {
  return _foo.foo97;
});

_$.g(_$.e, \\"foo98\\", function () {
  return _foo.foo98;
});

_$.g(_$.e, \\"foo99\\", function () {
  return _foo.foo99;
});

_$.g(_$.e, \\"foo100\\", function () {
  return _foo.foo100;
});"
`;

exports[`babel transform modules babel-plugin-transform-modules - Fixture: export-from-9 1`] = `
"var _foo = _$.r(\\"foo\\");

function stuff() {
  _$.g(_$.e, \\"foo\\", function () {
    return _foo.foo;
  });

  _$.g(_$.e, \\"foo1\\", function () {
    return _foo.foo1;
  });

  _$.g(_$.e, \\"foo2\\", function () {
    return _foo.foo2;
  });

  _$.g(_$.e, \\"foo3\\", function () {
    return _foo.foo3;
  });

  _$.g(_$.e, \\"foo4\\", function () {
    return _foo.foo4;
  });

  _$.g(_$.e, \\"foo5\\", function () {
    return _foo.foo5;
  });

  _$.g(_$.e, \\"foo6\\", function () {
    return _foo.foo6;
  });

  _$.g(_$.e, \\"foo7\\", function () {
    return _foo.foo7;
  });

  _$.g(_$.e, \\"foo8\\", function () {
    return _foo.foo8;
  });

  _$.g(_$.e, \\"foo9\\", function () {
    return _foo.foo9;
  });

  _$.g(_$.e, \\"foo10\\", function () {
    return _foo.foo10;
  });

  _$.g(_$.e, \\"foo11\\", function () {
    return _foo.foo11;
  });

  _$.g(_$.e, \\"foo12\\", function () {
    return _foo.foo12;
  });

  _$.g(_$.e, \\"foo13\\", function () {
    return _foo.foo13;
  });

  _$.g(_$.e, \\"foo14\\", function () {
    return _foo.foo14;
  });

  _$.g(_$.e, \\"foo15\\", function () {
    return _foo.foo15;
  });

  _$.g(_$.e, \\"foo16\\", function () {
    return _foo.foo16;
  });

  _$.g(_$.e, \\"foo17\\", function () {
    return _foo.foo17;
  });

  _$.g(_$.e, \\"foo18\\", function () {
    return _foo.foo18;
  });

  _$.g(_$.e, \\"foo19\\", function () {
    return _foo.foo19;
  });

  _$.g(_$.e, \\"foo20\\", function () {
    return _foo.foo20;
  });

  _$.g(_$.e, \\"foo21\\", function () {
    return _foo.foo21;
  });

  _$.g(_$.e, \\"foo22\\", function () {
    return _foo.foo22;
  });

  _$.g(_$.e, \\"foo23\\", function () {
    return _foo.foo23;
  });

  _$.g(_$.e, \\"foo24\\", function () {
    return _foo.foo24;
  });

  _$.g(_$.e, \\"foo25\\", function () {
    return _foo.foo25;
  });

  _$.g(_$.e, \\"foo26\\", function () {
    return _foo.foo26;
  });

  _$.g(_$.e, \\"foo27\\", function () {
    return _foo.foo27;
  });

  _$.g(_$.e, \\"foo28\\", function () {
    return _foo.foo28;
  });

  _$.g(_$.e, \\"foo29\\", function () {
    return _foo.foo29;
  });

  _$.g(_$.e, \\"foo30\\", function () {
    return _foo.foo30;
  });

  _$.g(_$.e, \\"foo31\\", function () {
    return _foo.foo31;
  });

  _$.g(_$.e, \\"foo32\\", function () {
    return _foo.foo32;
  });

  _$.g(_$.e, \\"foo33\\", function () {
    return _foo.foo33;
  });

  _$.g(_$.e, \\"foo34\\", function () {
    return _foo.foo34;
  });

  _$.g(_$.e, \\"foo35\\", function () {
    return _foo.foo35;
  });

  _$.g(_$.e, \\"foo36\\", function () {
    return _foo.foo36;
  });

  _$.g(_$.e, \\"foo37\\", function () {
    return _foo.foo37;
  });

  _$.g(_$.e, \\"foo38\\", function () {
    return _foo.foo38;
  });

  _$.g(_$.e, \\"foo39\\", function () {
    return _foo.foo39;
  });

  _$.g(_$.e, \\"foo40\\", function () {
    return _foo.foo40;
  });

  _$.g(_$.e, \\"foo41\\", function () {
    return _foo.foo41;
  });

  _$.g(_$.e, \\"foo42\\", function () {
    return _foo.foo42;
  });

  _$.g(_$.e, \\"foo43\\", function () {
    return _foo.foo43;
  });

  _$.g(_$.e, \\"foo44\\", function () {
    return _foo.foo44;
  });

  _$.g(_$.e, \\"foo45\\", function () {
    return _foo.foo45;
  });

  _$.g(_$.e, \\"foo46\\", function () {
    return _foo.foo46;
  });

  _$.g(_$.e, \\"foo47\\", function () {
    return _foo.foo47;
  });

  _$.g(_$.e, \\"foo48\\", function () {
    return _foo.foo48;
  });

  _$.g(_$.e, \\"foo49\\", function () {
    return _foo.foo49;
  });

  _$.g(_$.e, \\"foo50\\", function () {
    return _foo.foo50;
  });

  _$.g(_$.e, \\"foo51\\", function () {
    return _foo.foo51;
  });

  _$.g(_$.e, \\"foo52\\", function () {
    return _foo.foo52;
  });

  _$.g(_$.e, \\"foo53\\", function () {
    return _foo.foo53;
  });

  _$.g(_$.e, \\"foo54\\", function () {
    return _foo.foo54;
  });

  _$.g(_$.e, \\"foo55\\", function () {
    return _foo.foo55;
  });

  _$.g(_$.e, \\"foo56\\", function () {
    return _foo.foo56;
  });

  _$.g(_$.e, \\"foo57\\", function () {
    return _foo.foo57;
  });

  _$.g(_$.e, \\"foo58\\", function () {
    return _foo.foo58;
  });

  _$.g(_$.e, \\"foo59\\", function () {
    return _foo.foo59;
  });

  _$.g(_$.e, \\"foo60\\", function () {
    return _foo.foo60;
  });

  _$.g(_$.e, \\"foo61\\", function () {
    return _foo.foo61;
  });

  _$.g(_$.e, \\"foo62\\", function () {
    return _foo.foo62;
  });

  _$.g(_$.e, \\"foo63\\", function () {
    return _foo.foo63;
  });

  _$.g(_$.e, \\"foo64\\", function () {
    return _foo.foo64;
  });

  _$.g(_$.e, \\"foo65\\", function () {
    return _foo.foo65;
  });

  _$.g(_$.e, \\"foo66\\", function () {
    return _foo.foo66;
  });

  _$.g(_$.e, \\"foo67\\", function () {
    return _foo.foo67;
  });

  _$.g(_$.e, \\"foo68\\", function () {
    return _foo.foo68;
  });

  _$.g(_$.e, \\"foo69\\", function () {
    return _foo.foo69;
  });

  _$.g(_$.e, \\"foo70\\", function () {
    return _foo.foo70;
  });

  _$.g(_$.e, \\"foo71\\", function () {
    return _foo.foo71;
  });

  _$.g(_$.e, \\"foo72\\", function () {
    return _foo.foo72;
  });

  _$.g(_$.e, \\"foo73\\", function () {
    return _foo.foo73;
  });

  _$.g(_$.e, \\"foo74\\", function () {
    return _foo.foo74;
  });

  _$.g(_$.e, \\"foo75\\", function () {
    return _foo.foo75;
  });

  _$.g(_$.e, \\"foo76\\", function () {
    return _foo.foo76;
  });

  _$.g(_$.e, \\"foo77\\", function () {
    return _foo.foo77;
  });

  _$.g(_$.e, \\"foo78\\", function () {
    return _foo.foo78;
  });

  _$.g(_$.e, \\"foo79\\", function () {
    return _foo.foo79;
  });

  _$.g(_$.e, \\"foo80\\", function () {
    return _foo.foo80;
  });

  _$.g(_$.e, \\"foo81\\", function () {
    return _foo.foo81;
  });

  _$.g(_$.e, \\"foo82\\", function () {
    return _foo.foo82;
  });

  _$.g(_$.e, \\"foo83\\", function () {
    return _foo.foo83;
  });

  _$.g(_$.e, \\"foo84\\", function () {
    return _foo.foo84;
  });

  _$.g(_$.e, \\"foo85\\", function () {
    return _foo.foo85;
  });

  _$.g(_$.e, \\"foo86\\", function () {
    return _foo.foo86;
  });

  _$.g(_$.e, \\"foo87\\", function () {
    return _foo.foo87;
  });

  _$.g(_$.e, \\"foo88\\", function () {
    return _foo.foo88;
  });

  _$.g(_$.e, \\"foo89\\", function () {
    return _foo.foo89;
  });

  _$.g(_$.e, \\"foo90\\", function () {
    return _foo.foo90;
  });

  _$.g(_$.e, \\"foo91\\", function () {
    return _foo.foo91;
  });

  _$.g(_$.e, \\"foo92\\", function () {
    return _foo.foo92;
  });

  _$.g(_$.e, \\"foo93\\", function () {
    return _foo.foo93;
  });

  _$.g(_$.e, \\"foo94\\", function () {
    return _foo.foo94;
  });

  _$.g(_$.e, \\"foo95\\", function () {
    return _foo.foo95;
  });

  _$.g(_$.e, \\"foo96\\", function () {
    return _foo.foo96;
  });

  _$.g(_$.e, \\"foo97\\", function () {
    return _foo.foo97;
  });

  _$.g(_$.e, \\"foo98\\", function () {
    return _foo.foo98;
  });

  _$.g(_$.e, \\"foo99\\", function () {
    return _foo.foo99;
  });

  _$.g(_$.e, \\"foo100\\", function () {
    return _foo.foo100;
  });

  bar();
}"
`;

exports[`babel transform modules babel-plugin-transform-modules - Fixture: export-named 1`] = `
"_$.g(_$.e, \\"foo\\", function () {
  return foo;
});

let foo = 10;"
`;

exports[`babel transform modules babel-plugin-transform-modules - Fixture: export-named-2 1`] = `
"_$.g(_$.e, \\"foo\\", function () {
  return foo;
});

_$.g(_$.e, \\"bar\\", function () {
  return bar;
});

let foo = 10;
let bar = 20;"
`;

exports[`babel transform modules babel-plugin-transform-modules - Fixture: export-named-3 1`] = `
"_$.g(_$.e, \\"bar\\", function () {
  return foo;
});

let foo = 10;"
`;

exports[`babel transform modules babel-plugin-transform-modules - Fixture: export-named-4 1`] = `
"_$.g(_$.e, \\"default\\", function () {
  return foo;
});

let foo = 10;"
`;

exports[`babel transform modules babel-plugin-transform-modules - Fixture: export-named-5 1`] = `
"_$.g(_$.e, \\"default\\", function () {
  return foo;
});

_$.g(_$.e, \\"bar\\", function () {
  return bar;
});

let foo = 10;
let bar = 20;"
`;

exports[`babel transform modules babel-plugin-transform-modules - Fixture: exports-variable 1`] = `
"_$.g(_$.e, \\"foo\\", function () {
  return foo;
});

_$.g(_$.e, \\"foo2\\", function () {
  return foo2;
});

_$.g(_$.e, \\"bar\\", function () {
  return bar;
});

_$.g(_$.e, \\"foo3\\", function () {
  return foo3;
});

_$.g(_$.e, \\"foo4\\", function () {
  return foo4;
});

_$.g(_$.e, \\"foo5\\", function () {
  return foo5;
});

_$.g(_$.e, \\"foo6\\", function () {
  return foo6;
});

_$.g(_$.e, \\"foo7\\", function () {
  return foo7;
});

_$.g(_$.e, \\"foo8\\", function () {
  return foo8;
});

_$.g(_$.e, \\"foo9\\", function () {
  return foo9;
});

_$.g(_$.e, \\"b\\", function () {
  return b;
});

_$.g(_$.e, \\"c\\", function () {
  return c;
});

var foo = 1;
var foo2 = 1,
    bar = 2;

var foo3 = function () {};

var foo4;
let foo5 = 2;
let foo6;
const foo7 = 3;

function foo8() {}

class foo9 {}

const {
  a: b,
  c
} = {};"
`;

exports[`babel transform modules babel-plugin-transform-modules - Fixture: exports-variable-2 1`] = `
"_$.g(_$.e, \\"test\\", function () {
  return test;
});

_$.g(_$.e, \\"a\\", function () {
  return a;
});

_$.g(_$.e, \\"c\\", function () {
  return b;
});

_$.g(_$.e, \\"e\\", function () {
  return d;
});

_$.g(_$.e, \\"f\\", function () {
  return d;
});

_$.g(_$.e, \\"yy\\", function () {
  return yy;
});

_$.g(_$.e, \\"zz\\", function () {
  return zz;
});

_$.g(_$.e, \\"bar\\", function () {
  return bar;
});

_$.g(_$.e, \\"baz\\", function () {
  return baz;
});

var test = 2;
test = 5;
test++;

(function () {
  var test = 2;
  test = 3;
  test++;
})();

var a = 2;
a = 3;
var b = 2;
b = 3;
var d = 3;
d = 4;
var yy = 0;
var zz = yy++;
const {
  foo: bar,
  baz
} = {};
bar++;
baz++;
bar = 10;
baz = 10;"
`;

exports[`babel transform modules babel-plugin-transform-modules - Fixture: global-var-conflict 1`] = `
"_$2.r(\\"foo\\");

const usingGlobalVar = _$;"
`;

exports[`babel transform modules babel-plugin-transform-modules - Fixture: hoist-function-exports 1`] = `
"var _evens = _$.r(\\"./evens\\");

_$.g(_$.e, \\"nextOdd\\", function () {
  return nextOdd;
});

_$.g(_$.e, \\"isOdd\\", function () {
  return isOdd;
});

function nextOdd(n) {
  return (0, _evens.isEven)(n) ? n + 1 : n + 2;
}

var isOdd = function (isEven) {
  return function (n) {
    return !isEven(n);
  };
}(_evens.isEven);"
`;

exports[`babel transform modules babel-plugin-transform-modules - Fixture: imports 1`] = `
"_$.r(\\"foo\\");

_$.r(\\"foo-bar\\");

_$.r(\\"./directory/foo-bar\\");"
`;

exports[`babel transform modules babel-plugin-transform-modules - Fixture: imports-default 1`] = `
"var _foo = _$.r(\\"foo\\");

_foo.default;
_foo.default.bar;
_foo.default.bar.baz;

function a() {
  let foo = 10;
  foo;
}"
`;

exports[`babel transform modules babel-plugin-transform-modules - Fixture: imports-default-jsx 1`] = `
"var _foo = _$.r(\\"foo\\");

var _bar = _$.r(\\"bar\\");

<_foo.default></_foo.default>;
<_foo.default.bar></_foo.default.bar>;
<_foo.default.bar.baz></_foo.default.bar.baz>;
<_foo.default.bar.baz.foo></_foo.default.bar.baz.foo>;

function func() {
  let bar = {};
  <bar></bar>;
}"
`;

exports[`babel transform modules babel-plugin-transform-modules - Fixture: imports-glob 1`] = `
"var _foo = _$.r(\\"foo\\");

var foo = _foo;"
`;

exports[`babel transform modules babel-plugin-transform-modules - Fixture: imports-hoisting 1`] = `
"var _foo = _$.r(\\"./foo\\");

var bar = (0, _foo.default)();"
`;

exports[`babel transform modules babel-plugin-transform-modules - Fixture: imports-mixing 1`] = `
"var _foo = _$.r(\\"foo\\");

_foo.default;
_foo.baz;"
`;

exports[`babel transform modules babel-plugin-transform-modules - Fixture: imports-named 1`] = `
"var _foo = _$.r(\\"foo\\");

_foo.bar;
_foo.bar2;
_foo.baz;
_foo.bar;
_foo.bar;
_foo.xyz;"
`;

exports[`babel transform modules babel-plugin-transform-modules - Fixture: internals-shadow 1`] = `
"_$.g(_$.e, \\"$e\\", function () {
  return $e;
});

function $e() {}"
`;

exports[`babel transform modules babel-plugin-transform-modules - Fixture: nested-imports-exports 1`] = `
"if (true) {
  var _abc = _$.r(\\"./abc\\");

  var _other = _$.r(\\"./other\\");

  _$.g(_$.e, \\"outer\\", function () {
    return outer;
  });

  function outer() {
    return [_abc.a, _abc.b, _abc.c];
  }

  if (false) {
    _abc.default;
  }
}

foo;"
`;

exports[`babel transform modules babel-plugin-transform-modules - Fixture: nested-imports-exports-2 1`] = `
"switch (true) {
  case 0:
    var _abc = _$.r(\\"./abc\\");

    break;

  case true:
    _$.g(_$.e, \\"outer\\", function () {
      return outer;
    });

    function outer() {
      var _abc2 = _$.r(\\"./abc\\");

      return [_abc2.a, _abc2.b, _abc2.c];
    }

    break;

  case false:
    var _abc3 = _$.r(\\"./abc\\");

  default:
    _abc.default;
    _$.e.default = null;
}

foo;"
`;

exports[`babel transform modules babel-plugin-transform-modules - Fixture: nested-imports-exports-3 1`] = `
"if (true) {
  var _abc = _$.r(\\"./abc\\");
}

if (false) {
  var _abc2 = _$.r(\\"./abc\\");
}

if (true) {
  _$.g(_$.e, \\"outer\\", function () {
    return outer;
  });

  function outer() {
    var _abc3 = _$.r(\\"./abc\\");

    return [_abc3.a, _abc3.b, _abc3.c];
  }
}

if (false) {
  var _foo = _$.r(\\"./foo\\");

  _$.g(_$.e, \\"x\\", function () {
    return _foo.x;
  });
}

x; // Stay as x

y; // Stay as y"
`;

exports[`babel transform modules babel-plugin-transform-modules - Fixture: nested-imports-exports-4 1`] = `
"function a() {
  var _abc = _$.r(\\"./abc\\");
}

function b() {
  _$.g(_$.e, \\"outer\\", function () {
    return outer;
  });

  function outer() {
    var _abc2 = _$.r(\\"./abc\\");

    return [_abc2.a, _abc2.b, _abc2.c];
  }
}

x; // Stay as x

y; // Stay as y"
`;

exports[`babel transform modules babel-plugin-transform-modules - Fixture: nested-imports-exports-5 1`] = `
"while (true) {
  var _abc = _$.r(\\"./abc\\");
}

while (false) {
  var _abc2 = _$.r(\\"./abc\\");
}

for (const a in obj) {
  _$.g(_$.e, \\"outer\\", function () {
    return outer;
  });

  function outer() {
    var _abc3 = _$.r(\\"./abc\\");

    return [_abc3.a, _abc3.b, _abc3.c];
  }
}

while (false) {
  var _foo = _$.r(\\"./foo\\");

  _$.g(_$.e, \\"x\\", function () {
    return _foo.x;
  });
}

x; // Stay as x

y; // Stay as y"
`;

exports[`babel transform modules babel-plugin-transform-modules - Fixture: overview 1`] = `
"_$.r(\\"foo\\");

_$.r(\\"foo-bar\\");

_$.r(\\"./directory/foo-bar\\");

var _foo2 = _$.r(\\"foo2\\");

var _foo3 = _$.r(\\"foo3\\");

var _foo4 = _$.r(\\"foo4\\");

var _foo5 = _$.r(\\"foo5\\");

_$.r(\\"foo6\\");

_$.r(\\"foo7\\");

var _foo8 = _$.r(\\"foo8\\");

var foo2 = _foo3;

_$.g(_$.e, \\"test\\", function () {
  return test;
});

_$.g(_$.e, \\"test2\\", function () {
  return test2;
});

function test() {}

var test2 = 5;
_foo4.bar;
_foo5.foo;
_foo2.default;
_foo8.a;
_foo8.a;"
`;

exports[`babel transform modules babel-plugin-transform-modules - Fixture: this 1`] = `
"_$.r(\\"foo\\");

_$.r(\\"foo-bar\\");

_$.r(\\"./directory/foo-bar\\");

var _foo2 = _$.r(\\"foo2\\");

var _foo3 = _$.r(\\"foo3\\");

var _foo4 = _$.r(\\"foo4\\");

var _foo5 = _$.r(\\"foo5\\");

var foo2 = _foo3;
let a = undefined;

if (a) {
  let b = undefined;
}

function c() {
  return this;
}

let d = () => {
  return undefined;
};

let e = () => undefined;"
`;
